[project]
name = "eepsocket"
version = "0.0.1"
authors = [
  { name="Zevobla", email="zevobla@vk.com" },
]
description = "This repo realise socket like api for i2p"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Zevobla/eepsocket"
"Bug Tracker" = "https://github.com/Zevobla/eepsocket/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"